--- a/index.html
+++ b/index.html
@@ -89,12 +89,12 @@
                 <p>Imagen del equipo</p>
                 <small>(Insertar imagen aquí)</small>
             </div>
-
+    <section id="desarrolladores">
             <div class="team-grid">
                 <div class="team-member">
                     <div class="image-placeholder">
                         <i class="fas fa-user"></i>
-                        <p>Foto</p>
+                        <img class="fotos-desarrrolador" src="unnamed (1).JPG">
                     </div>
                     <h3>Desarrollador 1</h3>
                     <p>Frontend Developer</p>
@@ -102,7 +102,7 @@
                 <div class="team-member">
                     <div class="image-placeholder">
                         <i class="fas fa-user"></i>
-                        <p>Foto</p>
+                        <img class="fotos-desarrrolador" src="ricardo.jpg">
                     </div>
                     <h3>Desarrollador 2</h3>
                     <p>Backend Developer</p>
@@ -110,7 +110,6 @@
                 <div class="team-member">
                     <div class="image-placeholder">
                         <i class="fas fa-user"></i>
-                        <p>Foto</p>
                     </div>
                     <h3>Desarrollador 3</h3>
                     <p>UI/UX Designer</p>
@@ -118,7 +117,7 @@
             </div>
         </div>
     </section>
-
+    </section>
     <!-- About Project Section -->
     <section id="acerca" class="section">
         <h2>Acerca del Proyecto</h2>
