--- a/index.html
+++ b/index.html
@@ -82,12 +82,8 @@
             <h2>Sobre Nosotros</h2>
             <p>Somos un equipo comprometido con el desarrollo de soluciones tecnológicas que promuevan un uso saludable
                 de las pantallas digitales entre los estudiantes.</p>
-
+        <div class="imagen-equipo"></div>
             <!-- Placeholder para imagen del equipo -->
-            <div class="image-placeholder">
-                <i class="fas fa-users"></i>
-                <p>Imagen del equipo</p>
-                <small>(Insertar imagen aquí)</small>
             </div>
     <section id="desarrolladores">
             <div class="team-grid">
@@ -110,6 +106,7 @@
                 <div class="team-member">
                     <div class="image-placeholder">
                         <i class="fas fa-user"></i>
+                        <img class="fotos-desarrrolador" src="benja.jpg">
                     </div>
                     <h3>Desarrollador 3</h3>
                     <p>UI/UX Designer</p>
