--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
                 <div class="team-member">
                     <div class="image-placeholder">
                         <i class="fas fa-user"></i>
-                        <img class="fotos-desarrrolador" src="unnamed (1).JPG">
+                        <img class="fotos-desarrrolador" src="ian.jpg">
                     </div>
                     <h3>Desarrollador 1</h3>
                     <p>Frontend Developer</p>
@@ -182,7 +182,7 @@
         </div>
     </section>
 
-    <!-- Improvements Section -->
+<!-- Improvements Section -->
     <section id="mejoras" class="section">
         <h2>Mejoras para el Usuario</h2>
         <p>Nuestro proyecto implementa mejoras continuas basadas en investigación científica y feedback de usuarios para
@@ -197,32 +197,44 @@
 
         <div class="features-grid">
             <div class="feature-card">
-                <i class="fas fa-eye"></i>
+                <div class="image-placeholder">
+                    <img class="fotos-mejora" src="imagen1.jpg" alt="Salud Visual">
+                </div>
                 <h3>Salud Visual</h3>
                 <p>Filtros de luz azul, recordatorios de parpadeo y ejercicios oculares automatizados.</p>
             </div>
             <div class="feature-card">
-                <i class="fas fa-running"></i>
+                <div class="image-placeholder">
+                    <img class="fotos-mejora" src="imagen2.jpg" alt="Actividad Física">
+                </div>
                 <h3>Actividad Física</h3>
                 <p>Integración con dispositivos wearables y sugerencias de ejercicios durante los descansos.</p>
             </div>
             <div class="feature-card">
-                <i class="fas fa-moon"></i>
+                <div class="image-placeholder">
+                    <img class="fotos-mejora" src="imagen3.jpg" alt="Calidad del Sueño">
+                </div>
                 <h3>Calidad del Sueño</h3>
                 <p>Modo nocturno inteligente y recomendaciones para mejorar los patrones de sueño.</p>
             </div>
             <div class="feature-card">
-                <i class="fas fa-chart-line"></i>
+                <div class="image-placeholder">
+                    <img class="fotos-mejora" src="imagen4.jpg" alt="Análisis Predictivo">
+                </div>
                 <h3>Análisis Predictivo</h3>
                 <p>IA que predice patrones de uso problemáticos y sugiere intervenciones preventivas.</p>
             </div>
             <div class="feature-card">
-                <i class="fas fa-heart"></i>
+                <div class="image-placeholder">
+                    <img class="fotos-mejora" src="imagen5.jpg" alt="Bienestar Emocional">
+                </div>
                 <h3>Bienestar Emocional</h3>
                 <p>Herramientas de mindfulness, meditación guiada y gestión del estrés digital.</p>
             </div>
             <div class="feature-card">
-                <i class="fas fa-graduation-cap"></i>
+                <div class="image-placeholder">
+                    <img class="fotos-mejora" src="imagen6.jpg" alt="Rendimiento Académico">
+                </div>
                 <h3>Rendimiento Académico</h3>
                 <p>Optimización del tiempo de estudio digital y técnicas de concentración mejoradas.</p>
             </div>
