--- a/index.html
+++ b/index.html
@@ -198,48 +198,79 @@
         <div class="features-grid">
             <div class="feature-card">
                 <div class="image-placeholder">
-                    <img class="fotos-mejora" src="imagen1.jpg" alt="Salud Visual">
+                    <img class="fotos-mejora" src="salud-visual.jpg" alt="Salud Visual">
                 </div>
                 <h3>Salud Visual</h3>
                 <p>Filtros de luz azul, recordatorios de parpadeo y ejercicios oculares automatizados.</p>
             </div>
             <div class="feature-card">
                 <div class="image-placeholder">
-                    <img class="fotos-mejora" src="imagen2.jpg" alt="Actividad Física">
+                    <img class="fotos-mejora" src="ejercicio.jpg" alt="Actividad Física">
                 </div>
                 <h3>Actividad Física</h3>
                 <p>Integración con dispositivos wearables y sugerencias de ejercicios durante los descansos.</p>
             </div>
             <div class="feature-card">
                 <div class="image-placeholder">
-                    <img class="fotos-mejora" src="imagen3.jpg" alt="Calidad del Sueño">
+                    <img class="fotos-mejora" src="descanzo.jpg" alt="Calidad del Sueño">
                 </div>
                 <h3>Calidad del Sueño</h3>
                 <p>Modo nocturno inteligente y recomendaciones para mejorar los patrones de sueño.</p>
             </div>
             <div class="feature-card">
                 <div class="image-placeholder">
-                    <img class="fotos-mejora" src="imagen4.jpg" alt="Análisis Predictivo">
+                    <img class="fotos-mejora" src="ia.webp" alt="Análisis Predictivo">
                 </div>
                 <h3>Análisis Predictivo</h3>
                 <p>IA que predice patrones de uso problemáticos y sugiere intervenciones preventivas.</p>
             </div>
             <div class="feature-card">
                 <div class="image-placeholder">
-                    <img class="fotos-mejora" src="imagen5.jpg" alt="Bienestar Emocional">
+                    <img class="fotos-mejora" src="tranquilo.jfif" alt="Bienestar Emocional">
                 </div>
                 <h3>Bienestar Emocional</h3>
                 <p>Herramientas de mindfulness, meditación guiada y gestión del estrés digital.</p>
             </div>
             <div class="feature-card">
                 <div class="image-placeholder">
-                    <img class="fotos-mejora" src="imagen6.jpg" alt="Rendimiento Académico">
+                    <img class="fotos-mejora" src="trabajando.jpg" alt="Rendimiento Académico">
                 </div>
                 <h3>Rendimiento Académico</h3>
                 <p>Optimización del tiempo de estudio digital y técnicas de concentración mejoradas.</p>
             </div>
         </div>
     </section>
+
+    <!-- Footer -->
+    <footer class="footer">
+        <div class="footer-container">
+            <div class="footer-about">
+                <h3>Screen Balance</h3>
+                <p>Plataforma dedicada a mejorar el bienestar digital de los usuarios mediante tecnología innovadora y análisis personalizado.</p>
+            </div>
+
+            <div class="footer-links">
+                <h4>Enlaces rápidos</h4>
+                <ul>
+                    <li><a href="#inicio">Inicio</a></li>
+                    <li><a href="#mejoras">Mejoras</a></li>
+                    <li><a href="#equipo">Equipo</a></li>
+                    <li><a href="#contacto">Contacto</a></li>
+                </ul>
+            </div>
+
+            <div class="footer-contact">
+                <h4>Contacto</h4>
+                <p>Email: contacto@screenbalance.com</p>
+                <p>Teléfono: +56 9 1234 5678</p>
+                <p>Dirección: Av. Innovación 123, Santiago, Chile</p>
+            </div>
+        </div>
+        <div class="footer-bottom">
+            <p>&copy; 2025 Screen Balance - Todos los derechos reservados</p>
+        </div>
+    </footer>
+
     <script src="script.js"></script>
 </body>
 
