--- a/index.html
+++ b/index.html
@@ -13,7 +13,15 @@
     <nav class="navbar transparent" id="navbar">
         <div class="nav-container">
             <a href="#" class="logo">Screen Balance</a>
-            <ul class="nav-menu">
+            
+            <!-- Botón hamburguesa para móvil -->
+            <button class="hamburger" id="hamburger">
+                <span></span>
+                <span></span>
+                <span></span>
+            </button>
+            
+            <ul class="nav-menu" id="nav-menu">
                 <li><a href="#inicio" class="nav-link active">Página De Inicio</a></li>
                 <li><a href="#login" class="nav-link">Inicio De Sesión</a></li>
                 <li><a href="#nosotros" class="nav-link">Sobre Nosotros</a></li>
