--- a/index.html
+++ b/index.html
@@ -13,14 +13,14 @@
     <nav class="navbar transparent" id="navbar">
         <div class="nav-container">
             <a href="#" class="logo">Screen Balance</a>
-            
+
             <!-- Botón hamburguesa para móvil -->
-            <button class="hamburger" id="hamburger">
+            <button class="hamburger" id="hamburger" aria-label="Menú">
                 <span></span>
                 <span></span>
                 <span></span>
             </button>
-            
+
             <ul class="nav-menu" id="nav-menu">
                 <li><a href="#inicio" class="nav-link active">Página De Inicio</a></li>
                 <li><a href="#login" class="nav-link">Inicio De Sesión</a></li>
