--- a/index.html
+++ b/index.html
@@ -24,17 +24,16 @@
             <ul class="nav-menu" id="nav-menu">
                 <li><a href="#inicio" class="nav-link active">Página De Inicio</a></li>
                 <li><a href="#login" class="nav-link">Inicio De Sesión</a></li>
-                <li><a href="#nosotros" class="nav-link">Sobre Nosotros</a></li>
+                <li><a href="#mejoras" class="nav-link">mejoras</a></li>
                 <li><a href="#acerca" class="nav-link">ACERCA DE</a></li>
                 <li><a href="#uso" class="nav-link">USO</a></li>
-                <li><a href="#mejoras" class="nav-link">MEJORAS</a></li>
+                <li><a href="#nosotros" class="nav-link">SOBRE NOSOTROS</a></li>
             </ul>
         </div>
     </nav>
 
     <!-- Hero Section -->
     <section id="inicio" class="hero">
-        <!-- Placeholder para imagen de fondo del hero -->
         <img src="" alt="Hero Background" class="hero-background-image" style="display: none;">
         <div class="hero-overlay"></div>
         <div class="hero-content">
@@ -84,45 +83,6 @@
         </div>
     </section>
 
-    <!-- About Us Section -->
-    <section id="nosotros" class="section">
-        <div class="section-content">
-            <h2>Sobre Nosotros</h2>
-            <p>Somos un equipo comprometido con el desarrollo de soluciones tecnológicas que promuevan un uso saludable
-                de las pantallas digitales entre los estudiantes.</p>
-        <div class="imagen-equipo"></div>
-            <!-- Placeholder para imagen del equipo -->
-            </div>
-    <section id="desarrolladores">
-            <div class="team-grid">
-                <div class="team-member">
-                    <div class="image-placeholder">
-                        <i class="fas fa-user"></i>
-                        <img class="fotos-desarrrolador" src="ian.jpg">
-                    </div>
-                    <h3>Desarrollador 1</h3>
-                    <p>Frontend Developer</p>
-                </div>
-                <div class="team-member">
-                    <div class="image-placeholder">
-                        <i class="fas fa-user"></i>
-                        <img class="fotos-desarrrolador" src="ricardo.jpg">
-                    </div>
-                    <h3>Desarrollador 2</h3>
-                    <p>Backend Developer</p>
-                </div>
-                <div class="team-member">
-                    <div class="image-placeholder">
-                        <i class="fas fa-user"></i>
-                        <img class="fotos-desarrrolador" src="benja.jpg">
-                    </div>
-                    <h3>Desarrollador 3</h3>
-                    <p>UI/UX Designer</p>
-                </div>
-            </div>
-        </div>
-    </section>
-    </section>
     <!-- About Project Section -->
     <section id="acerca" class="section">
         <h2>Acerca del Proyecto</h2>
@@ -130,7 +90,6 @@
             equilibrio saludable en el uso de dispositivos digitales, promoviendo hábitos responsables y mejorando el
             bienestar general.</p>
 
-        <!-- Placeholder para imagen del proyecto -->
         <div class="image-placeholder large">
             <i class="fas fa-laptop"></i>
             <p>Captura de pantalla de la aplicación</p>
@@ -163,7 +122,6 @@
             <p>Screen Balance ofrece múltiples funcionalidades para diferentes tipos de usuarios, desde estudiantes
                 hasta educadores y padres de familia.</p>
 
-            <!-- Placeholder para imagen de uso -->
             <div class="image-placeholder">
                 <i class="fas fa-mobile-alt"></i>
                 <p>Interfaz de la aplicación en uso</p>
@@ -190,13 +148,12 @@
         </div>
     </section>
 
-<!-- Improvements Section -->
+    <!-- Improvements Section -->
     <section id="mejoras" class="section">
         <h2>Mejoras para el Usuario</h2>
         <p>Nuestro proyecto implementa mejoras continuas basadas en investigación científica y feedback de usuarios para
             maximizar los beneficios del bienestar digital.</p>
 
-        <!-- Placeholder para imagen de mejoras -->
         <div class="image-placeholder">
             <i class="fas fa-chart-line"></i>
             <p>Gráficos y estadísticas de mejoras</p>
@@ -249,6 +206,18 @@
         </div>
     </section>
 
+    <!-- Equipo Section (movida al final) -->
+    <section id="nosotros" class="section">
+        <div class="section-content">
+            <h2>Sobre Nosotros</h2>
+            <p>Somos un equipo comprometido con el desarrollo de soluciones tecnológicas que promuevan un uso saludable
+                de las pantallas digitales entre los estudiantes.</p>
+            <div class="imagen-equipo">
+                <img src="equipo.jpg" alt="Imagen del equipo">
+            </div>
+        </div>
+    </section>
+
     <!-- Footer -->
     <footer class="footer">
         <div class="footer-container">
@@ -281,5 +250,4 @@
 
     <script src="script.js"></script>
 </body>
-
 </html>
