--- a/index.html
+++ b/index.html
@@ -89,13 +89,6 @@
         <p>Screen Balance es una aplicación innovadora diseñada para ayudar a estudiantes y educadores a mantener un
             equilibrio saludable en el uso de dispositivos digitales, promoviendo hábitos responsables y mejorando el
             bienestar general.</p>
-
-        <div class="image-placeholder large">
-            <i class="fas fa-laptop"></i>
-            <p>Captura de pantalla de la aplicación</p>
-            <small>(Insertar imagen aquí)</small>
-        </div>
-
         <div class="features-grid">
             <div class="feature-card">
                 <i class="fas fa-shield-alt"></i>
@@ -121,13 +114,6 @@
             <h2>Uso del Proyecto</h2>
             <p>Screen Balance ofrece múltiples funcionalidades para diferentes tipos de usuarios, desde estudiantes
                 hasta educadores y padres de familia.</p>
-
-            <div class="image-placeholder">
-                <i class="fas fa-mobile-alt"></i>
-                <p>Interfaz de la aplicación en uso</p>
-                <small>(Insertar imagen aquí)</small>
-            </div>
-
             <div class="features-grid">
                 <div class="feature-card">
                     <i class="fas fa-user-graduate"></i>
@@ -153,13 +139,6 @@
         <h2>Mejoras para el Usuario</h2>
         <p>Nuestro proyecto implementa mejoras continuas basadas en investigación científica y feedback de usuarios para
             maximizar los beneficios del bienestar digital.</p>
-
-        <div class="image-placeholder">
-            <i class="fas fa-chart-line"></i>
-            <p>Gráficos y estadísticas de mejoras</p>
-            <small>(Insertar imagen aquí)</small>
-        </div>
-
         <div class="features-grid">
             <div class="feature-card">
                 <div class="image-placeholder">
@@ -196,13 +175,6 @@
                 <h3>Bienestar Emocional</h3>
                 <p>Herramientas de mindfulness, meditación guiada y gestión del estrés digital.</p>
             </div>
-            <div class="feature-card">
-                <div class="image-placeholder">
-                    <img class="fotos-mejora" src="trabajando.jpg" alt="Rendimiento Académico">
-                </div>
-                <h3>Rendimiento Académico</h3>
-                <p>Optimización del tiempo de estudio digital y técnicas de concentración mejoradas.</p>
-            </div>
         </div>
     </section>
 
@@ -213,7 +185,7 @@
             <p>Somos un equipo comprometido con el desarrollo de soluciones tecnológicas que promuevan un uso saludable
                 de las pantallas digitales entre los estudiantes.</p>
             <div class="imagen-equipo">
-                <img src="equipo.jpg" alt="Imagen del equipo">
+                <img src="equipo.jpg" alt="">
             </div>
         </div>
     </section>
